@@ -27,6 +27,7 @@ env:
     - SAMTOOLS_VERSION="1.6"
     - PICARD_VERSION="1.72"
     - STAR_VERSION="2.5.2b"
+    - MINIMAP2_VERSION="2.10"
     - TOOLS_INSTALLED=1
 #    - TEST_AUTHOR=1 # disabled to avoid perl critic complaints
     - MACHTYPE="`uname -m`"
