@@ -131,6 +131,9 @@ wget https://github.com/alexdobin/STAR/archive/${STAR_VERSION}.zip
 unzip ${STAR_VERSION}.zip
 ln -s /tmp/STAR-${STAR_VERSION}/bin/Linux_x86_64_static/STAR /tmp/bin/star
 
+# minimap2
+curl -L https://github.com/lh3/minimap2/releases/download/v${MINIMAP2_VERSION}/minimap2-${MINIMAP2_VERSION}_x64-linux.tar.bz2 | tar -jxvf -
+ln -s /tmp/minimap2-${MINIMAP2_VERSION}_x64-linux/minimap2 /tmp/bin/minimap2
 
 popd
 
