@@ -2,6 +2,7 @@ LIST OF CHANGES
 
   - in preparation for moving to bwa0_6 as default, added tests which check
     that the code works for soft-linked bwa
+  - update Ref_Maker to produce indexes for minimap2
 
 release 50.17
   - update travis install
